[package]
name = "odf"
version = "0.1.0"
edition = "2024"
description = "OIDC Device Flow CLI — manage tokens for any CLI tool"
license = "MIT"

[[bin]]
name = "odf"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
dirs = "6"
open = "5"
chrono = { version = "0.4", features = ["serde"] }
indicatif = "0.17"
thiserror = "2"
atty = "0.2"
libc = "0.2"
age = { version = "0.11", features = ["armor"] }
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
